<resources>
    <string name="app_name">Cafe Order</string>
    <string name="logo_description">Logo</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="default_name">клиент</string>
    <string name="default_password">пароль</string>
    <string name="hint_name">Введите свое имя:</string>
    <string name="hint_password">Введите свой пароль:</string>
    <string name="button_create_order">Создать Заказ</string>
    <string name="warning">Все поля должны быть заполнены</string>
    <string name="hello_user">Привет %s! Что будете заказывать?</string>
    <string name="tea">Чай</string>
    <string name="coffee">Кофе</string>
    <string name="additions">Что добавить в ваш %s</string>
    <string name="milk">Молоко</string>
    <string name="sugar">Сахар</string>
    <string name="lemon">Лемон</string>
    <string name="chose_drink">Выбирите вид напитка?</string>
    <string name="button_send_description">Кнопка отправить заказ</string>
    <string name="order">Имя: %s\nПароль: %s\nНапиток: %s\nВид напитка: %s\n</string>
    <string name="need_additions">\"Необходимые добавки: \"</string>

    <string-array name="options_of_coffee">
        <item>Americano</item>
        <item>Espresso</item>
        <item>Latte</item>
    </string-array>

    <string-array name="options_of_tea">
        <item>Black</item>
        <item>Green</item>
        <item>Red</item>
    </string-array>
</resources>
